# Kinematics-Project

./: README.md  todo.md
DR1_kinematics/: CMakeLists.txt  sdkconfig  servo_scanner.py
DR1_kinematics/main/: CMakeLists.txt  app_main.cpp  frame.cpp  idf_component.yml
DR1_kinematics/main/Common/: ESPNow.cpp  ESPNow.hpp  ESPNowNode.hpp
DR1_kinematics/main/Leader/: Leader.cpp
DR1_kinematics/main/Primary/: primary.cpp
DR1_kinematics/main/ServoCommunication/: ServoCommunication.cpp  ServoCommunication.hpp
DR1_kinematics/main/ServoControl/: ServoBusBase.cpp  ServoBusBase.hpp
Resources/: STS3215_Memory_Map_EN.xlsx  ~$STS3215_Memory_Map_EN.xlsx
