idf_component_register(
    SRCS
        "app_main.cpp"
        "frame.cpp"
        "Common/ESPNow.cpp"
        "Leader/Leader.cpp"
        "Primary/primary.cpp"
        "ServoControl/ServoBusBase.cpp"
        "ServoCommunication/ServoCommunication.cpp"
    INCLUDE_DIRS
        "."
        "Common"
        "Leader"
        "Primary"
        "ServoControl"
        "ServoCommunication"
    REQUIRES
        esp_wifi
        freertos
        esp_err
        esp_driver_uart
        esp_driver_usb_serial_jtag
        nvs_flash
)
